# dcp-rag

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
dcp_rag/core/: schema.py
dcp_rag/schemas/: rag-rerank-signal.v1.json  rag-result-summary.v1.json
reports/: LIGHTWEIGHT_LLM_TEST_PLAN.md  density_retest_results.json
schemas/: rag-chunk-meta.v1.json  rag-query-hint.v1.json
tests/: test_density_retest.mjs  test_integration_qdrant.py
